--- a/source/_posts/如何测试加密站点.md
+++ b/source/_posts/如何测试加密站点.md
@@ -7,7 +7,7 @@ tags: 加解密
 
 **文章首发于先知社区**
 
-地址 [https://xz.aliyun.com/t/12652](https://xz.aliyun.com/t/12652)
+地址 [http://xz.aliyun.com/t/12652](http://xz.aliyun.com/t/12652)
 
 ## 0x1 前言
 
@@ -19,13 +19,13 @@ tags: 加解密
 
 咋们进入正题，在对小程序的某个接口进行测试时，发现会返回当前用户的个人信息，通过将电话号码置空，返回了所有用户的信息，可惜的是关键敏感信息如姓名、电话号码、身份证号等信息都是加密的
 
-![Snipaste_2023-06-14_22-53-52](https://cdn.laohuan.art/Snipaste_2023-06-14_22-53-52.png)
+![Snipaste_2023-06-14_22-53-52](http://qn.laohuan.xin/Snipaste_2023-06-14_22-53-52.png)
 
 得尽量解密数据将它升级为高危漏洞
 
 通过逆向小程序找到了加密算法和key，就差解密了，解密使用的是github上的一个项目burpy
 
-[地址:https://github.com/mr-m0nst3r/Burpy](https://github.com/mr-m0nst3r/Burpy)
+[地址:http://github.com/mr-m0nst3r/Burpy](http://github.com/mr-m0nst3r/Burpy)
 
 这个插件可以很方便地对通过bp的数据进行加密和解密，项目也给出了示例脚本，我们一般情况下只需要编写`encrytp`和`decrypt`两个函数就可以。
 
@@ -94,15 +94,15 @@ def aesd(s):
 
 通过设置好插件的python路径和脚本路径，启动插件，就可以邮件解密数据了，原谅我码较厚。
 
-![Snipaste_2023-06-14_22-55-06](https://cdn.laohuan.art/Snipaste_2023-06-14_22-55-06.png)
+![Snipaste_2023-06-14_22-55-06](http://qn.laohuan.xin/Snipaste_2023-06-14_22-55-06.png)
 
-![Snipaste_2023-06-14_22-57-02](https://cdn.laohuan.art/Snipaste_2023-06-14_22-57-02.png)
+![Snipaste_2023-06-14_22-57-02](http://qn.laohuan.xin/Snipaste_2023-06-14_22-57-02.png)
 
 通过右键解密会弹出一个窗口来显示解密数据，如果想在bp的原始窗口显示解密数据你可以开启自动加密解密功能
 
-![Snipaste_2023-06-14_22-51-10](https://cdn.laohuan.art/Snipaste_2023-06-14_22-51-10.png)
+![Snipaste_2023-06-14_22-51-10](http://qn.laohuan.xin/Snipaste_2023-06-14_22-51-10.png)
 
-![Snipaste_2023-06-14_22-50-19](https://cdn.laohuan.art/Snipaste_2023-06-14_22-50-19.png)
+![Snipaste_2023-06-14_22-50-19](http://qn.laohuan.xin/Snipaste_2023-06-14_22-50-19.png)
 
 ## 0x3 mitmproxy
 
@@ -116,7 +116,7 @@ def aesd(s):
 
 有道翻译的返回数据都是经过加密的，如图
 
-![Snipaste_2023-06-26_22-34-37](https://cdn.laohuan.art/Snipaste_2023-06-26_22-34-37.png)
+![Snipaste_2023-06-26_22-34-37](http://qn.laohuan.xin/Snipaste_2023-06-26_22-34-37.png)
 
 通过分析加密代码发现加密方式为aes加密，找到了加密的key和IV就可以编写脚本了
 
@@ -161,7 +161,7 @@ addons = [Mimit(),]
 
 我们再将burpsuite的上游代理设置为9090端口，这样就能看到明文数据了
 
-![Snipaste_2023-06-26_22-31-54](https://cdn.laohuan.art/Snipaste_2023-06-26_22-31-54.png)
+![Snipaste_2023-06-26_22-31-54](http://qn.laohuan.xin/Snipaste_2023-06-26_22-31-54.png)
 
 ### 3.2 请求体和响应体解密
 
@@ -169,7 +169,7 @@ addons = [Mimit(),]
 
 可以看到数据都是加密过的
 
-![Snipaste_2023-07-01_16-02-38](https://cdn.laohuan.art/Snipaste_2023-07-01_16-02-38.png)
+![Snipaste_2023-07-01_16-02-38](http://qn.laohuan.xin/Snipaste_2023-07-01_16-02-38.png)
 
 想要在bp里看到明文的请求数据和响应数据，就需要结合bp的上游代理和下游代理了
 
@@ -179,7 +179,7 @@ addons = [Mimit(),]
 
 这其中有个小问题
 
-![image-20230702225750117](https://cdn.laohuan.art/image-20230702225750117.png)
+![image-20230702225750117](http://qn.laohuan.xin/image-20230702225750117.png)
 
 从请求方向看，下游代理解密数据后，数据一直以明文的形式发送到服务器，服务器肯定要按照设定的程序对数据进行解密，解密必定是失败的，所以无法返回正常数据。
 
@@ -187,7 +187,7 @@ addons = [Mimit(),]
 
 所以我们需要在上游代理对明文数据进行加密后发送给服务器，在下游代理将数据加密发送给浏览器客户端，如下图
 
-![image-20230702230746091](https://cdn.laohuan.art/image-20230702230746091.png)
+![image-20230702230746091](http://qn.laohuan.xin/image-20230702230746091.png)
 
 这样就可以正常查看明文数据了，同样的可以结合xray来使用这种方法。
 
@@ -335,7 +335,7 @@ addons = [Mimit(),]
 
 启动下游代理,将数据发送到bp的8080端口
 
-`mitmdump -p 7070 -s .\test.py  --mode upstream:https://127.0.0.1:8080 --ssl-insecure`
+`mitmdump -p 7070 -s .\test.py  --mode upstream:http://127.0.0.1:8080 --ssl-insecure`
 
 启动上游代理
 
@@ -343,7 +343,7 @@ addons = [Mimit(),]
 
 bp设置上游代理到9090端口，这样就可以查看请求和响应的明文了
 
-![Snipaste_2023-07-02_16-37-54](https://cdn.laohuan.art/Snipaste_2023-07-02_16-37-54.png)
+![Snipaste_2023-07-02_16-37-54](http://qn.laohuan.xin/Snipaste_2023-07-02_16-37-54.png)
 
 ## 0x4 工具结合
 
@@ -432,7 +432,7 @@ sqlmap
 
 `sqlmap -r sql.txt -proxy http://192.168.1.5:9090`
 
-![Snipaste_2023-07-02_17-49-11](https://cdn.laohuan.art/Snipaste_2023-07-02_17-49-11.png)
+![Snipaste_2023-07-02_17-49-11](http://qn.laohuan.xin/Snipaste_2023-07-02_17-49-11.png)
 
 ### 4.2 xray
 
@@ -571,7 +571,7 @@ addons = [Mimit(),]
 
 启动下游代理,将数据转发到xray的端口
 
-`mitmdump -p 7070 -s .\test.py  --mode upstream:https://127.0.0.1:8090 --ssl-insecure`
+`mitmdump -p 7070 -s .\test.py  --mode upstream:http://127.0.0.1:8090 --ssl-insecure`
 
 启动上游代理
 
@@ -579,7 +579,7 @@ addons = [Mimit(),]
 
 配置xray的代理,修改config文件
 
-![Snipaste_2023-07-02_16-45-03](https://cdn.laohuan.art/Snipaste_2023-07-02_16-45-03.png)
+![Snipaste_2023-07-02_16-45-03](http://qn.laohuan.xin/Snipaste_2023-07-02_16-45-03.png)
 
 
 
@@ -591,7 +591,7 @@ addons = [Mimit(),]
 
 但xray这里没能跑出来sql注入，应该是xray对json的解析有问题，无法解析json的值，将payload直接拼接在了后面，不是json传输的站点应该没问题。
 
-![image-20230702234721067](https://cdn.laohuan.art/image-20230702234721067.png)
+![image-20230702234721067](http://qn.laohuan.xin/image-20230702234721067.png)
 
 **测试代码**
 
@@ -604,8 +604,8 @@ addons = [Mimit(),]
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>用户查询</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+    <script src="http://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 
 </head>
 <body>
@@ -744,9 +744,9 @@ echo $results;
 
 ## 0x5 参考链接
 
-[https://mp.weixin.qq.com/s/C0RoOau5Twc9Pkyggi98hw](https://mp.weixin.qq.com/s/C0RoOau5Twc9Pkyggi98hw)
+[http://mp.weixin.qq.com/s/C0RoOau5Twc9Pkyggi98hw](http://mp.weixin.qq.com/s/C0RoOau5Twc9Pkyggi98hw)
 
-[https://mp.weixin.qq.com/s/9MijUowOd5eAkAwSQievFw](https://mp.weixin.qq.com/s/9MijUowOd5eAkAwSQievFw)
+[http://mp.weixin.qq.com/s/9MijUowOd5eAkAwSQievFw](http://mp.weixin.qq.com/s/9MijUowOd5eAkAwSQievFw)
 
-[https://blog.csdn.net/freeking101/article/details/83901842](https://blog.csdn.net/freeking101/article/details/83901842)
+[http://blog.csdn.net/freeking101/article/details/83901842](http://blog.csdn.net/freeking101/article/details/83901842)
 
